[metadata]
name = comsar
version = 0.0.1
description = Computational Music and Sound Archiving
long_description = file: README.md
licence = BSD-3-Clause
author = Michael Blaß
author_email = michael.blass@uni-hamburg.de
keywords = hmm, som, comsar, music, analysis

classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Database
	Topic :: Multimedia :: Sound/Audio :: Analysis
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	License :: OSI Approved :: BSD License

[options]
zip_safe = True
include_package_data = True
packages = find:
scripts =  scripts/comsar
setup_requires = numpy
install_requires = 
	numpy
	scipy      >= "0.19.0"
	matplotlib >= "2"
	pandas     >= "0.20"
	setuptools >= "40.0.0"
	sklearn    >= "0.20"
	
