[metadata]
name = comsar
version = 0.0.2
description = Computational Music and Sound Archiving
long_description = file: README.md
license = BSD-3-Clause
author = Michael Blaß
author_email = michael.blass@uni-hamburg.de
keywords = comsar, music, analysis, ethnomusicology
url = https://comsar.fbkultur.uni-hamburg.de/ 
download_url = https://https://gitlab.rrz.uni-hamburg.de/bal7668/comsar
project_urls = 
	Code Repository = https://gitlab.rrz.uni-hamburg.de/bal7668/comsar
	Bug tracker = https://gitlab.rrz.uni-hamburg.de/bal7668/comsar/-/issues

classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Database
	Topic :: Multimedia :: Sound/Audio :: Analysis
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	License :: OSI Approved :: BSD License

[options]
zip_safe = False
package_dir =
	=src
include_package_data = False
packages = find_namespace:
python_requires >= '3.7'
install_requires = 
	apollon @ git+https://gitlab.rrz.uni-hamburg.de/bal7668/apollon@develop
	pandas
	

[options.packages.find]
where = src
